# Banking_Transactions_API

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yaml
data/: data.csv.xlsx  transactions.csv
src/banking_transaction_api/: data_loader.py  database.py  main.py  models.py  transaction.py
src/banking_transaction_api/routers/: customers.py  fraud.py  statistiques.py  system.py  transactions.py
src/banking_transaction_api/services/: customers_service.py  fraud_service.py  stats_service.py  system_service.py  transaction_service.py  transactions_service.py
tests/: test_customer_routes.py  test_fraud_routes.py  test_stats.py  test_transactions.py
tests/tests/: test_system.py
